--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.3.1",
+    "gulp-minify": "0.0.14",
     "gulp-ng-config": "^1.3.1",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "main-bower-files": "^2.13.1"
   }
 }
